mobile changes to prevent horizontal scroll

--- a/css/style.css
+++ b/css/style.css
@@ -190,7 +190,7 @@ footer {
 
   /*small image styles */
   .img-sm {
-    max-width: 375px !important;
+    max-width: 350px !important;
 }
 
   .img-sm-port {
@@ -254,6 +254,7 @@ footer {
             display: block;
             padding: 0; 
             height: 85px;
+            max-width: 100vw;
             background-color: var(--secondary-bg-color);
             top: 0;
             left: 0;
@@ -297,6 +298,10 @@ footer {
               padding: 3rem;
           }
 
+          .dropdown-content {
+              display: none;
+          }
+
         .container {
             scroll-snap-type: mandatory;
         }
@@ -313,12 +318,11 @@ footer {
         .home-container {
             display: grid;
             grid-template-columns: 1fr;
-            width: 100%;
-            font-size: .9rem;
+            width: 100vw;
+            font-size: .8rem;
         }
 
-        .article-1 {
-            
+        .article-1 {            
             margin-bottom: 3rem;
         }
 
@@ -342,6 +346,7 @@ footer {
 
         #section-1 {
             color: var(--main-yellow);
+            padding: 0 5rem;
         }
 
         #section-2 {
@@ -358,7 +363,7 @@ footer {
         }
       
         .reportagen-title {
-            margin:0;
+            margin: 0;
             padding:2rem;
         }
         
@@ -367,8 +372,8 @@ footer {
             display: grid;
             grid-template-columns: 1fr;
             background-color: var(--main-bg-color);
-            height: 435px;
-            width: 400px;
+            max-height: 435px;
+            max-width: 100%;
             border: 1px solid white;
             border-radius: 3px;
         }
@@ -377,7 +382,9 @@ footer {
             align-self: end;
             padding-top: 1rem;
             justify-self: center;
+            padding: 0 .3rem;
         }
+
 
         .card-text {
             align-self: start;
@@ -444,15 +451,16 @@ footer {
         .about {
             scroll-snap-align: start;
             grid-template-columns: 1fr;
-            height: 75vh;
+            display: grid;
             grid-template-areas: 
             "name"
             "img"
             "about"
             "link";
             font-size: .9rem;
-            max-height: 500px;
-            margin-bottom: 150px; 
+            max-height: 100vh;
+            margin-bottom: 50px; 
+            padding-bottom: 1rem;
         }
 
         .about .name {
@@ -464,6 +472,13 @@ footer {
         .about .about-text {
             grid-area: about;
             padding: .5rem 1.5rem;
+        }
+
+        .about .photos-link {
+            padding: 1rem;
+            grid-area: link;
+            justify-self: center;
+            width: 85%;
         }
     
        
@@ -521,13 +536,14 @@ footer {
           .contact-details {
             display: grid;
             grid-template-columns: 1fr; 
-            padding: .5rem;
+            padding: 1rem;
             gap: 1rem;
         }
 
         .contact-details-wrapper {
             width: 100%;
-            font-size: 0.9rem;
+            font-size: 0.8rem;
+            padding: 2rem .5rem;
         }
 
 
@@ -720,7 +736,7 @@ footer {
             visibility: hidden;
         }
 
-        /* ausstellung desktop */
+        /* ausstellung */
 
         .article-ausstellung {
             display: grid;
